--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfslick/core",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "source": "./index.ts",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -29,7 +29,7 @@
   "scripts": {
     "lint": "eslint \"**/*.ts*\"",
     "dev": "concurrently \"rollup --config node:@pdfslick/rollup-config --watch\" \"npm run css-watch\"",
-    "build": "rollup --config node:@pdfslick/rollup-config --environment NODE_ENV:production && npm run css && cp ../../README.md ./dist",
+    "build": "rollup --config node:@pdfslick/rollup-config --environment NODE_ENV:production && npm run css",
     "css": "postcss styles/pdf_viewer.css --config ./postcss.config.cjs --dir dist",
     "css-watch": "npm run css -- --watch"
   },
