--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfslick/react",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "source": "./index.tsx",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -27,7 +27,7 @@
   "scripts": {
     "lint": "eslint \"**/*.ts*\"",
     "dev": "concurrently \"rollup --config node:@pdfslick/rollup-config --watch\" \"wait-on ./dist && cp ../core/dist/pdf_viewer.css ./dist\"",
-    "build": "rollup --config node:@pdfslick/rollup-config --environment NODE_ENV:production && cp ../core/dist/pdf_viewer.css ./dist && cp ../core/dist/pdf_viewer.css ./dist && cp ../../README.md ./dist"
+    "build": "rollup --config node:@pdfslick/rollup-config --environment NODE_ENV:production && cp ../core/dist/pdf_viewer.css ./dist"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
