--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfslick/solid",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "source": "./index.tsx",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -27,7 +27,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint \"**/*.ts*\"",
-    "build": "rollup -c --environment NODE_ENV:production && tsc --emitDeclarationOnly && cp ../core/dist/pdf_viewer.css ./dist && cp ../../README.md ./dist",
+    "build": "rollup -c --environment NODE_ENV:production && tsc --emitDeclarationOnly && cp ../core/dist/pdf_viewer.css ./dist",
     "dev": "concurrently \"rollup -c -w\" \"wait-on ./dist && cp ../core/dist/pdf_viewer.css ./dist\""
   },
   "devDependencies": {
