--- a/config/eslint-config-custom/package.json
+++ b/config/eslint-config-custom/package.json
@@ -6,10 +6,10 @@
   "license": "MIT",
   "dependencies": {
     "eslint": "^7.23.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "^13.4.9",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.31.8",
-    "eslint-config-turbo": "latest"
+    "eslint-config-turbo": "^1.10.7",
+    "eslint-plugin-react": "^7.32.2"
   },
   "devDependencies": {
     "typescript": "^4.9.5"
