--- a/package.json
+++ b/package.json
@@ -2,6 +2,30 @@
   "name": "pdfslick",
   "version": "0.0.0",
   "private": true,
+  "author": {
+    "name": "Vancho Stojkov",
+    "email": "vancho@stojkov.me",
+    "url": "https://stojkov.me"
+  },
+  "homepage": "https://pdfslick.dev",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/pdfslick/pdfslick.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pdfslick/pdfslick/issues"
+  },
+  "keywords": [
+    "pdfslick",
+    "pdf slick",
+    "view pdf",
+    "interact pdf",
+    "pdf react",
+    "pdf solidjs",
+    "pdf solid",
+    "pdf.js"
+  ],
   "workspaces": [
     "apps/*",
     "packages/*",
