--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,20 +6,31 @@
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "description": "PDFSlick — view and interact with PDF documents in your React and SolidJS apps.",
+  "author": {
+    "name": "Vancho Stojkov",
+    "email": "vancho@stojkov.me",
+    "url": "https://stojkov.me"
+  },
+  "homepage": "https://pdfslick.dev",
+  "bugs": {
+    "url": "https://github.com/pdfslick/pdfslick/issues"
+  },
   "keywords": [
-    "pdf",
-    "pdf.js",
-    "react",
-    "solidjs",
-    "solid",
-    "pdfslick"
+    "pdfslick",
+    "pdf slick",
+    "view pdf",
+    "interact pdf",
+    "pdf react",
+    "pdf solidjs",
+    "pdf solid",
+    "pdf.js"
   ],
   "files": [
     "dist"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/pdfslick/pdfslick.git",
+    "url": "git://github.com/pdfslick/pdfslick.git",
     "directory": "packages/core"
   },
   "sideEffects": [
