--- a/package.json
+++ b/package.json
@@ -2,6 +2,30 @@
   "name": "pdfslick",
   "version": "0.0.0",
   "private": true,
+  "author": {
+    "name": "Vancho Stojkov",
+    "email": "vancho@stojkov.me",
+    "url": "https://stojkov.me"
+  },
+  "homepage": "https://pdfslick.dev",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/pdfslick/pdfslick.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pdfslick/pdfslick/issues"
+  },
+  "keywords": [
+    "pdfslick",
+    "pdf slick",
+    "view pdf",
+    "interact pdf",
+    "pdf react",
+    "pdf solidjs",
+    "pdf solid",
+    "pdf.js"
+  ],
   "workspaces": [
     "apps/*",
     "packages/*",
@@ -18,18 +42,18 @@
     "update-deps": "ncu -ws -i"
   },
   "devDependencies": {
-    "concurrently": "^8.2.0",
+    "concurrently": "^8.2.1",
     "eslint-config-custom": "*",
-    "npm-check-updates": "^16.13.2",
+    "npm-check-updates": "^16.14.5",
     "prettier": "latest",
-    "turbo": "^1.10.13"
+    "turbo": "^1.10.15"
   },
   "engines": {
     "node": ">=14.0.0"
   },
   "dependencies": {
     "@changesets/cli": "^2.26.2",
-    "rollup": "^3.26.2"
+    "rollup": "^4.0.2"
   },
   "packageManager": "npm@9.8.0"
 }
