--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,25 +1,36 @@
 {
   "name": "@pdfslick/core",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "source": "./index.ts",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "description": "PDFSlick — view and interact with PDF documents in your React and SolidJS apps.",
+  "author": {
+    "name": "Vancho Stojkov",
+    "email": "vancho@stojkov.me",
+    "url": "https://stojkov.me"
+  },
+  "homepage": "https://pdfslick.dev",
+  "bugs": {
+    "url": "https://github.com/pdfslick/pdfslick/issues"
+  },
   "keywords": [
-    "pdf",
-    "pdf.js",
-    "react",
-    "solidjs",
-    "solid",
-    "pdfslick"
+    "pdfslick",
+    "pdf slick",
+    "view pdf",
+    "interact pdf",
+    "pdf react",
+    "pdf solidjs",
+    "pdf solid",
+    "pdf.js"
   ],
   "files": [
     "dist"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/pdfslick/pdfslick.git",
+    "url": "git://github.com/pdfslick/pdfslick.git",
     "directory": "packages/core"
   },
   "sideEffects": [
@@ -34,16 +45,16 @@
     "css-watch": "npm run css -- --watch"
   },
   "dependencies": {
-    "pdfjs-dist": "^3.10.111",
-    "zustand": "^4.4.1"
+    "pdfjs-dist": "^3.11.174",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@pdfslick/rollup-config": "*",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.1",
-    "eslint": "^8.48.0",
+    "eslint": "^8.51.0",
     "eslint-config-custom": "*",
-    "postcss": "^8.4.28",
+    "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "postcss-inline-svg": "^6.0.0",
     "react": "^18.2.0",
