--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,22 +1,35 @@
 {
   "name": "@pdfslick/react",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "source": "./index.tsx",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "description": "PDFSlick React — view and interact with PDF documents in your React apps.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pdfslick/pdfslick.git",
-    "directory": "packages/react"
+  "author": {
+    "name": "Vancho Stojkov",
+    "email": "vancho@stojkov.me",
+    "url": "https://stojkov.me"
+  },
+  "homepage": "https://pdfslick.dev",
+  "bugs": {
+    "url": "https://github.com/pdfslick/pdfslick/issues"
   },
   "keywords": [
-    "pdf",
-    "pdf.js",
-    "react",
-    "pdfslick"
+    "pdfslick",
+    "pdf slick",
+    "view pdf",
+    "interact pdf",
+    "interact pdf react",
+    "pdf react",
+    "pdf react viewer",
+    "pdf.js"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/pdfslick/pdfslick.git",
+    "directory": "packages/react"
+  },
   "files": [
     "dist"
   ],
@@ -30,9 +43,9 @@
     "build": "rollup --config node:@pdfslick/rollup-config --environment NODE_ENV:production && cp ../core/dist/pdf_viewer.css ./dist"
   },
   "devDependencies": {
-    "@types/react": "^18.2.21",
+    "@types/react": "^18.2.25",
     "concurrently": "^8.2.1",
-    "eslint": "^8.48.0",
+    "eslint": "^8.51.0",
     "eslint-config-custom": "*",
     "react": "^18.2.0",
     "tsconfig": "*",
@@ -46,7 +59,7 @@
   "dependencies": {
     "@pdfslick/core": "*",
     "react-use": "^17.4.0",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.3"
   },
   "rollup": {
     "globals": {
