--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfslick/solid",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "source": "./index.tsx",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -9,19 +9,34 @@
     "*.css"
   ],
   "description": "PDFSlick SolidJS — view and interact with PDF documents in your SolidJS apps.",
+  "author": {
+    "name": "Vancho Stojkov",
+    "email": "vancho@stojkov.me",
+    "url": "https://stojkov.me"
+  },
+  "homepage": "https://pdfslick.dev",
+  "bugs": {
+    "url": "https://github.com/pdfslick/pdfslick/issues"
+  },
   "keywords": [
-    "pdf",
-    "pdf.js",
-    "solidjs",
-    "solid",
-    "pdfslick"
+    "pdfslick",
+    "pdf slick",
+    "view pdf",
+    "interact pdf",
+    "pdf solid",
+    "pdf solidjs",
+    "pdf viewer solid",
+    "pdf interact solid",
+    "pdf viewer solidjs",
+    "pdf interact solidjs",
+    "pdf.js"
   ],
   "files": [
     "dist"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/pdfslick/pdfslick.git",
+    "url": "git://github.com/pdfslick/pdfslick.git",
     "directory": "packages/solid"
   },
   "license": "MIT",
@@ -31,20 +46,20 @@
     "dev": "concurrently \"rollup -c -w\" \"wait-on ./dist && cp ../core/dist/pdf_viewer.css ./dist\""
   },
   "devDependencies": {
-    "@babel/core": "^7.22.11",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-typescript": "^7.22.11",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@types/babel__core": "^7.20.1",
-    "babel-preset-solid": "^1.7.7",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.23.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.5",
+    "@types/babel__core": "^7.20.2",
+    "babel-preset-solid": "^1.7.12",
     "concurrently": "^8.2.1",
-    "eslint": "^8.48.0",
+    "eslint": "^8.51.0",
     "eslint-config-custom": "*",
     "merge-anything": "^5.1.7",
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-preset-solid": "^2.0.1",
-    "solid-js": "^1.7.11",
+    "solid-js": "^1.7.12",
     "solid-refresh": "^0.5.3",
     "tsconfig": "*",
     "typescript": "^5.2.2",
@@ -55,8 +70,8 @@
   },
   "dependencies": {
     "@pdfslick/core": "*",
-    "@solid-primitives/resize-observer": "^2.0.21",
-    "zustand": "^4.4.1"
+    "@solid-primitives/resize-observer": "^2.0.22",
+    "zustand": "^4.4.3"
   },
   "rollup": {
     "globals": {
