--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,8 +13,8 @@
     "@heroicons/react": "^2.0.18",
     "@markdoc/markdoc": "^0.3.4",
     "@markdoc/next.js": "^0.3.4",
-    "@pdfslick/core": "*",
-    "@pdfslick/react": "*",
+    "@pdfslick/core": "^1.2.4",
+    "@pdfslick/react": "^1.2.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@sindresorhus/slugify": "^2.2.1",
     "@tabler/icons-react": "^2.39.0",
@@ -44,12 +44,12 @@
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
     "eslint": "8.52.0",
-    "eslint-config-custom": "*",
+    "eslint-config-custom": "0.0.0",
     "postcss": "^8.4.31",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
-    "tsconfig": "*",
+    "tsconfig": "0.0.0",
     "typescript": "^5.2.2"
   }
 }
