--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfslick/solid",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "source": "./index.tsx",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -55,13 +55,13 @@
     "babel-preset-solid": "^1.8.2",
     "concurrently": "^8.2.2",
     "eslint": "^8.52.0",
-    "eslint-config-custom": "*",
+    "eslint-config-custom": "0.0.0",
     "merge-anything": "^5.1.7",
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-preset-solid": "^2.0.1",
     "solid-js": "^1.8.3",
     "solid-refresh": "^0.5.3",
-    "tsconfig": "*",
+    "tsconfig": "0.0.0",
     "typescript": "^5.2.2",
     "wait-on": "^7.0.1"
   },
@@ -69,7 +69,7 @@
     "solid-js": ">=1.5.0"
   },
   "dependencies": {
-    "@pdfslick/core": "*",
+    "@pdfslick/core": "^1.2.4",
     "@solid-primitives/resize-observer": "^2.0.22",
     "zustand": "^4.4.4"
   },
