--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,19 +11,19 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@markdoc/markdoc": "^0.3.2",
-    "@markdoc/next.js": "^0.3.3",
-    "@pdfslick/core": "*",
-    "@pdfslick/react": "*",
+    "@markdoc/markdoc": "^0.3.4",
+    "@markdoc/next.js": "^0.3.4",
+    "@pdfslick/core": "^1.2.4",
+    "@pdfslick/react": "^1.2.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tabler/icons-react": "^2.38.0",
+    "@tabler/icons-react": "^2.39.0",
     "clsx": "^2.0.0",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
     "focus-visible": "^5.2.0",
     "install": "^0.13.0",
-    "next": "^13.5.4",
+    "next": "^13.5.6",
     "postcss-focus-visible": "^9.0.0",
     "postcss-import": "^15.1.0",
     "prism-react-renderer": "^2.1.0",
@@ -33,23 +33,23 @@
     "react-use": "^17.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
+    "@babel/core": "^7.23.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/d3-drag": "^3.0.4",
-    "@types/d3-selection": "^3.0.7",
-    "@types/node": "^20.8.3",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "^18.2.11",
+    "@types/d3-drag": "^3.0.5",
+    "@types/d3-selection": "^3.0.8",
+    "@types/node": "^20.8.7",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
-    "eslint": "8.51.0",
-    "eslint-config-custom": "*",
+    "eslint": "8.52.0",
+    "eslint-config-custom": "0.0.0",
     "postcss": "^8.4.31",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
-    "tsconfig": "*",
+    "tsconfig": "0.0.0",
     "typescript": "^5.2.2"
   }
 }
