--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "postcss-focus-visible": "^9.0.0",
     "postcss-import": "^15.1.0",
     "prism-react-renderer": "^2.1.0",
+    "prism-svelte": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
