--- a/apps/solidweb/package.json
+++ b/apps/solidweb/package.json
@@ -16,20 +16,21 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/d3-drag": "^3.0.7",
     "@types/d3-selection": "^3.0.10",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "vite": "^4.5.1",
-    "vite-plugin-solid": "^2.8.0"
+    "vite": "^5.1.3",
+    "vite-plugin-solid": "^2.10.1"
   },
   "dependencies": {
-    "@kobalte/core": "^0.11.2",
+    "@kobalte/core": "^0.12.1",
     "@pdfslick/solid": "^1.2.4",
-    "@solid-primitives/resize-observer": "^2.0.22",
+    "@solid-primitives/resize-observer": "^2.0.23",
     "d3-drag": "^3.0.0",
     "d3-selection": "^3.0.0",
     "solid-icons": "^1.1.0",
-    "solid-js": "^1.8.7"
-  }
+    "solid-js": "^1.8.15"
+  },
+  "type": "module"
 }
