--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -40,10 +40,11 @@
   "scripts": {
     "lint": "eslint \"**/*.ts*\"",
     "dev": "concurrently \"rollup --config node:@pdfslick/rollup-config --watch\" \"wait-on ./dist && cp ../core/dist/pdf_viewer.css ./dist\"",
+    "devdev": "rollup --config node:@pdfslick/rollup-config && cp ../core/dist/pdf_viewer.css ./dist",
     "build": "rollup --config node:@pdfslick/rollup-config --environment NODE_ENV:production && cp ../core/dist/pdf_viewer.css ./dist"
   },
   "devDependencies": {
-    "@types/react": "^18.2.46",
+    "@types/react": "^18.2.56",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
     "eslint-config-custom": "0.0.0",
@@ -58,8 +59,8 @@
   },
   "dependencies": {
     "@pdfslick/core": "^1.2.7",
-    "react-use": "^17.4.2",
-    "zustand": "^4.4.7"
+    "react-use": "^17.5.0",
+    "zustand": "^4.5.1"
   },
   "rollup": {
     "globals": {
