--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.27.1",
-    "rollup": "^4.9.2"
+    "rollup": "^4.9.2",
+    "pdfjs-dist": "3.11.174"
   },
   "packageManager": "npm@9.8.0"
 }
