--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version-file: '.nvmrc'
-          cache: 'npm'
+          node-version-file: ".nvmrc"
+          cache: "npm"
       - name: Clean Install
         run: npm ci
       - name: Build
@@ -25,3 +25,9 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           command: pages publish apps/web/out --project-name pdfslick
+      - name: Deploy Svelte
+        uses: cloudflare/wrangler-action@2.0.0
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          command: wrangler pages deploy apps/svelteweb/.svelte-kit/cloudflare --project-name pdfslicksvelte  --commit-dirty=true --branch main
