--- a/apps/svelteweb/package.json
+++ b/apps/svelteweb/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@sveltejs/adapter-auto": "^3.2.0",
+		"@sveltejs/adapter-cloudflare": "^4.4.0",
 		"@sveltejs/kit": "^2.5.8",
 		"@sveltejs/vite-plugin-svelte": "^3.1.0",
 		"@typescript-eslint/eslint-plugin": "^7.9.0",
