--- a/turbo.json
+++ b/turbo.json
@@ -1,24 +1,40 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
-  "pipeline": {
+  "globalDependencies": [
+    "**/.env.*local"
+  ],
+  "globalEnv": [
+    "NODE_ENV"
+  ],
+  "tasks": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**",
+        ".next/**",
+        "!.next/cache/**"
+      ]
     },
     "lint": {
       "outputs": []
     },
     "devdev": {
-      "outputs": ["dist/**"],
+      "outputs": [
+        "dist/**"
+      ],
       "cache": false
     },
     "dev": {
-      "dependsOn": ["^devdev"],
-      "outputs": ["dist/**"],
+      "dependsOn": [
+        "^devdev"
+      ],
+      "outputs": [
+        "dist/**"
+      ],
       "cache": false,
       "persistent": true
     }
-  },
-  "globalEnv": ["NODE_ENV"]
+  }
 }
