--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,7 +31,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "vite": "^5.4.11"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
