--- a/config/eslint-config-custom/package.json
+++ b/config/eslint-config-custom/package.json
@@ -9,7 +9,8 @@
     "eslint-config-next": "^14.2.11",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-turbo": "^2.3.3",
-    "eslint-plugin-react": "^7.37.2"
+    "eslint-plugin-react": "^7.37.2",
+    "vite": "^5.4.11"
   },
   "devDependencies": {
     "typescript": "^5.6.2"
