--- a/config/rollup-config/package.json
+++ b/config/rollup-config/package.json
@@ -16,5 +16,8 @@
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "vite": "^5.4.11"
   }
 }
