--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "pdfjs-dist": "^4.9.155",
+    "vite": "^5.4.11",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
