--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -73,6 +73,7 @@
   "dependencies": {
     "@pdfslick/core": "^1.5.2",
     "@solid-primitives/resize-observer": "^2.0.26",
+    "vite": "^5.4.11",
     "zustand": "^4.5.5"
   },
   "rollup": {
