--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfslick/core",
-  "version": "1.5.2",
+  "version": "2.0.0",
   "source": "./index.ts",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -47,15 +47,16 @@
   },
   "dependencies": {
     "pdfjs-dist": "^4.9.155",
+    "vite": "^5.4.11",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@pdfslick/rollup-config": "0.0.0",
     "autoprefixer": "^10.4.20",
-    "concurrently": "^8.2.2",
+    "concurrently": "^9.1.0",
     "eslint": "^8.56.0",
     "eslint-config-custom": "0.0.0",
-    "postcss": "^8.4.47",
+    "postcss": "^8.4.49",
     "postcss-cli": "^11.0.0",
     "postcss-inline-svg": "^6.0.0",
     "postcss-url": "^10.1.3",
