--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfslick/react",
-  "version": "1.5.2",
+  "version": "2.0.0",
   "source": "./index.tsx",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -45,13 +45,13 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
-    "concurrently": "^8.2.2",
+    "concurrently": "^9.1.0",
     "copyfiles": "^2.4.1",
     "eslint": "^8.56.0",
     "eslint-config-custom": "0.0.0",
     "react": "^18.3.1",
     "tsconfig": "0.0.0",
-    "typescript": "^5.6.2",
+    "typescript": "^5.7.2",
     "wait-on": "^7.2.0"
   },
   "peerDependencies": {
@@ -59,8 +59,9 @@
     "react-dom": ">=17"
   },
   "dependencies": {
-    "@pdfslick/core": "^1.5.2",
-    "react-use": "^17.5.1",
+    "@pdfslick/core": "^2.0.0",
+    "react-use": "^17.6.0",
+    "vite": "^5.4.11",
     "zustand": "^4.5.5"
   },
   "rollup": {
