--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfslick/solid",
-  "version": "1.5.2",
+  "version": "2.0.0",
   "source": "./index.tsx",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -47,21 +47,21 @@
     "dev": "concurrently \"rollup -c -w\" \"wait-on ./dist && copyfiles -u 3 '../core/dist/pdf_viewer.css' ./dist\""
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-typescript": "^7.24.7",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@types/babel__core": "^7.20.5",
-    "babel-preset-solid": "^1.8.22",
-    "concurrently": "^8.2.2",
+    "babel-preset-solid": "^1.9.3",
+    "concurrently": "^9.1.0",
     "copyfiles": "^2.4.1",
     "eslint": "^8.56.0",
     "eslint-config-custom": "0.0.0",
     "merge-anything": "^5.1.7",
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-preset-solid": "^2.0.1",
-    "solid-js": "^1.8.22",
+    "solid-js": "^1.9.3",
     "solid-refresh": "^0.7.5",
     "tsconfig": "0.0.0",
     "typescript": "^5.6.2",
@@ -71,8 +71,9 @@
     "solid-js": ">=1.5.0"
   },
   "dependencies": {
-    "@pdfslick/core": "^1.5.2",
+    "@pdfslick/core": "^2.0.0",
     "@solid-primitives/resize-observer": "^2.0.26",
+    "vite": "^5.4.11",
     "zustand": "^4.5.5"
   },
   "rollup": {
