--- a/apps/solidweb/package.json
+++ b/apps/solidweb/package.json
@@ -13,24 +13,25 @@
   "devDependencies": {
     "@kobalte/tailwindcss": "^0.9.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/d3-drag": "^3.0.7",
     "@types/d3-selection": "^3.0.11",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.11",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.13",
     "vite-plugin-solid": "^2.11.0"
   },
   "dependencies": {
     "@kobalte/core": "^0.13.7",
     "@pdfslick/solid": "^2.0.0",
-    "@solid-primitives/resize-observer": "^2.0.26",
+    "@solid-primitives/resize-observer": "^2.1.0",
     "d3-drag": "^3.0.0",
     "d3-selection": "^3.0.0",
     "solid-icons": "^1.1.0",
-    "solid-js": "^1.9.3"
+    "solid-js": "^1.9.4",
+    "zustand": "^5.0.3"
   },
   "type": "module"
 }
