--- a/apps/svelteweb/package.json
+++ b/apps/svelteweb/package.json
@@ -13,9 +13,9 @@
 	},
 	"devDependencies": {
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
-		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/adapter-cloudflare": "^4.8.0",
-		"@sveltejs/kit": "^2.11.1",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-cloudflare": "^5.0.1",
+		"@sveltejs/kit": "^2.16.1",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@typescript-eslint/eslint-plugin": "^7.15.0",
 		"@typescript-eslint/parser": "^7.15.0",
@@ -23,20 +23,22 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
 		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.2",
+		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^4.2.19",
-		"svelte-check": "^4.1.1",
+		"svelte-check": "^4.1.4",
 		"tslib": "^2.8.1",
-		"typescript": "^5.6.2",
-		"vite": "^5.4.11"
+		"typescript": "^5.6.3",
+		"vite": "^5.4.13"
 	},
 	"dependencies": {
 		"@pdfslick/core": "^2.0.0",
 		"clsx": "^2.1.1",
 		"d3-drag": "^3.0.0",
 		"d3-selection": "^3.0.0",
-		"iconify-icon": "^2.2.0",
-		"svelte-portal": "^2.2.1"
+		"iconify-icon": "^2.3.0",
+		"svelte-portal": "^2.2.1",
+		"tailwindcss": "^3.4.17",
+		"zustand": "^5.0.3"
 	},
 	"type": "module"
 }
