--- a/apps/vanillajs/package.json
+++ b/apps/vanillajs/package.json
@@ -10,12 +10,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.11"
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.13"
   },
   "dependencies": {
-    "@pdfslick/core": "^2.0.0"
+    "@pdfslick/core": "^2.0.0",
+    "zustand": "^5.0.3"
   }
 }
