--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,15 +15,15 @@
     "@markdoc/next.js": "^0.3.7",
     "@pdfslick/core": "^2.0.0",
     "@pdfslick/react": "^2.0.0",
-    "@radix-ui/react-popover": "^1.1.3",
+    "@radix-ui/react-popover": "^1.1.5",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tabler/icons-react": "^3.24.0",
+    "@tabler/icons-react": "^3.29.0",
     "clsx": "^2.1.1",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
     "focus-visible": "^5.2.1",
     "install": "^0.13.0",
-    "next": "^15.1.0",
+    "next": "^15.1.6",
     "postcss-focus-visible": "^9.0.1",
     "postcss-import": "^16.1.0",
     "prism-react-renderer": "^2.4.1",
@@ -32,26 +32,27 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-use": "^17.6.0",
-    "vite": "^5.4.11"
+    "vite": "^5.4.13",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
+    "@babel/core": "^7.26.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/d3-drag": "^3.0.7",
     "@types/d3-selection": "^3.0.11",
-    "@types/node": "^20.14.9",
+    "@types/node": "^22.13.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "eslint": "8.56.0",
     "eslint-config-custom": "0.0.0",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsconfig": "0.0.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   }
 }
