--- a/config/eslint-config-custom/package.json
+++ b/config/eslint-config-custom/package.json
@@ -8,12 +8,14 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.11",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-turbo": "^2.3.3",
-    "eslint-plugin-react": "^7.37.2",
-    "vite": "^5.4.11"
+    "eslint-config-turbo": "^2.4.0",
+    "eslint-plugin-react": "^7.37.4",
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.4.13",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "publishConfig": {
     "access": "public"
