--- a/config/rollup-config/package.json
+++ b/config/rollup-config/package.json
@@ -15,9 +15,11 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
-    "vite": "^5.4.11"
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.4.13",
+    "zustand": "^5.0.3"
   }
 }
