--- a/config/tsconfig/package.json
+++ b/config/tsconfig/package.json
@@ -9,6 +9,9 @@
     "core.json"
   ],
   "dependencies": {
-    "vite": "^5.4.11"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.13",
+    "zustand": "^5.0.3"
   }
 }
