--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,23 +46,24 @@
     "css-watch": "npm run css -- --watch"
   },
   "dependencies": {
-    "pdfjs-dist": "^4.9.155",
-    "vite": "^5.4.11",
-    "zustand": "^4.5.5"
+    "pdfjs-dist": "^4.10.38",
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.4.13",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@pdfslick/rollup-config": "0.0.0",
     "autoprefixer": "^10.4.20",
-    "concurrently": "^9.1.0",
+    "concurrently": "^9.1.2",
     "eslint": "^8.56.0",
     "eslint-config-custom": "0.0.0",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "postcss-cli": "^11.0.0",
     "postcss-inline-svg": "^6.0.0",
     "postcss-url": "^10.1.3",
     "react": "^18.3.1",
     "tsconfig": "0.0.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "rollup": {
     "globals": {
