--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -45,14 +45,14 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
-    "concurrently": "^9.1.0",
+    "concurrently": "^9.1.2",
     "copyfiles": "^2.4.1",
     "eslint": "^8.56.0",
     "eslint-config-custom": "0.0.0",
     "react": "^18.3.1",
     "tsconfig": "0.0.0",
-    "typescript": "^5.7.2",
-    "wait-on": "^7.2.0"
+    "typescript": "^5.6.3",
+    "wait-on": "^8.0.2"
   },
   "peerDependencies": {
     "react": ">=17",
@@ -61,8 +61,9 @@
   "dependencies": {
     "@pdfslick/core": "^2.0.0",
     "react-use": "^17.6.0",
-    "vite": "^5.4.11",
-    "zustand": "^4.5.5"
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.4.13",
+    "zustand": "^5.0.3"
   },
   "rollup": {
     "globals": {
