Update Svelte and kit versions and demos

--- a/apps/svelteweb/package.json
+++ b/apps/svelteweb/package.json
@@ -12,27 +12,31 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/adapter-cloudflare": "^5.0.1",
-		"@sveltejs/kit": "^2.16.1",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@sveltejs/adapter-cloudflare": "^5.0.2",
+		"@sveltejs/kit": "^2.17.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@typescript-eslint/eslint-plugin": "^7.15.0",
 		"@typescript-eslint/parser": "^7.15.0",
+		"bits-ui": "^1.0.0-next.86",
+		"clsx": "^2.1.1",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
+		"lucide-svelte": "^0.474.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^4.2.19",
+		"svelte": "^5.19.8",
 		"svelte-check": "^4.1.4",
+		"tailwind-merge": "^3.0.1",
+		"tailwind-variants": "^0.3.1",
+		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.8.1",
 		"typescript": "^5.6.3",
-		"vite": "^5.4.13"
+		"vite": "^6.1.0"
 	},
 	"dependencies": {
 		"@pdfslick/core": "^2.0.0",
-		"clsx": "^2.1.1",
 		"d3-drag": "^3.0.0",
 		"d3-selection": "^3.0.0",
 		"iconify-icon": "^2.3.0",
