--- a/apps/svelteweb/package.json
+++ b/apps/svelteweb/package.json
@@ -32,7 +32,7 @@
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.8.1",
-		"typescript": "^5.6.3",
+		"typescript": "5.6.3",
 		"vite": "^6.1.0"
 	},
 	"dependencies": {
