--- a/apps/vanillajs/package.json
+++ b/apps/vanillajs/package.json
@@ -12,7 +12,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.6.3",
+    "typescript": "5.6.3",
     "vite": "^5.4.13"
   },
   "dependencies": {
