--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -53,6 +53,6 @@
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsconfig": "0.0.0",
-    "typescript": "^5.6.3"
+    "typescript": "5.6.3"
   }
 }
