--- a/config/eslint-config-custom/package.json
+++ b/config/eslint-config-custom/package.json
@@ -15,7 +15,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "typescript": "^5.6.3"
+    "typescript": "5.6.3"
   },
   "publishConfig": {
     "access": "public"
