--- a/config/rollup-config/package.json
+++ b/config/rollup-config/package.json
@@ -15,7 +15,7 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "typescript": "^5.6.3"
+    "typescript": "5.6.3"
   },
   "dependencies": {
     "tailwindcss": "^3.4.17",
