--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -63,7 +63,7 @@
     "postcss-url": "^10.1.3",
     "react": "^18.3.1",
     "tsconfig": "0.0.0",
-    "typescript": "^5.6.3"
+    "typescript": "5.6.3"
   },
   "rollup": {
     "globals": {
