--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -64,7 +64,7 @@
     "solid-js": "^1.9.4",
     "solid-refresh": "^0.7.5",
     "tsconfig": "0.0.0",
-    "typescript": "^5.6.3",
+    "typescript": "5.6.3",
     "wait-on": "^8.0.2"
   },
   "peerDependencies": {
