--- a/.github/workflows/publish_packages_to_npm.yml
+++ b/.github/workflows/publish_packages_to_npm.yml
@@ -3,6 +3,10 @@ on:
   release:
     types: [published]
 
+env:
+  FORCE_COLOR: 1
+  TURBO_TELEMETRY_DISABLED: 1
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,8 +14,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
-          registry-url: 'https://registry.npmjs.org'
+          node-version-file: ".nvmrc"
+          registry-url: "https://registry.npmjs.org"
       - name: Clean Install
         run: npm ci
       - name: Build
