--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -77,6 +77,9 @@
     "vite": "^5.4.13",
     "zustand": "^5.0.3"
   },
+  "publishConfig": {
+    "provenance": true
+  },
   "rollup": {
     "globals": {
       "zustand": "zustand",
