Fix publishin issues

--- a/.github/workflows/publish_packages_to_npm.yml
+++ b/.github/workflows/publish_packages_to_npm.yml
@@ -3,6 +3,10 @@ on:
   release:
     types: [published]
 
+permissions:
+  contents: read
+  id-token: write
+
 env:
   FORCE_COLOR: 1
   TURBO_TELEMETRY_DISABLED: 1
