--- a/apps/vanillajs/package.json
+++ b/apps/vanillajs/package.json
@@ -16,7 +16,6 @@
     "vite": "^5.4.13"
   },
   "dependencies": {
-    "@pdfslick/core": "^2.0.0",
-    "zustand": "^5.0.3"
+    "@pdfslick/core": "^2.0.0"
   }
 }
