--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,9 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-use": "^17.6.0",
-    "vite": "^5.4.13",
-    "zustand": "^5.0.3"
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
