--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -61,9 +61,7 @@
   "dependencies": {
     "@pdfslick/core": "^2.1.3",
     "react-use": "^17.6.0",
-    "use-sync-external-store": "^1.4.0",
-    "vite": "^5.4.13",
-    "zustand": "^5.0.3"
+    "use-sync-external-store": "^1.4.0"
   },
   "publishConfig": {
     "provenance": true
