--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -72,9 +72,7 @@
   },
   "dependencies": {
     "@pdfslick/core": "^2.1.3",
-    "@solid-primitives/resize-observer": "^2.1.0",
-    "vite": "^5.4.13",
-    "zustand": "^5.0.3"
+    "@solid-primitives/resize-observer": "^2.1.0"
   },
   "publishConfig": {
     "provenance": true
