Publish Solid Live Demo

--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -35,3 +35,9 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           command: pages deploy apps/svelteweb/.svelte-kit/cloudflare --project-name pdfslicksvelte --branch main
+      - name: Deploy Solid
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          command: pages deploy apps/solidweb/dist --project-name pdfslicksolid --branch main
