Use trusted publishing for npm packages

--- a/.github/workflows/publish_packages_to_npm.yml
+++ b/.github/workflows/publish_packages_to_npm.yml
@@ -20,10 +20,12 @@ jobs:
         with:
           node-version-file: ".nvmrc"
           registry-url: "https://registry.npmjs.org"
+
+      # Ensure npm 11.5.1 or later is installed
+      - name: Update npm
+        run: npm install -g npm@latest
       - name: Clean Install
         run: npm ci
       - name: Build
         run: npm run build
       - run: npm run publish-packages
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
